# zentinelle-sdk

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  agents.md  bootstrap.md  gemini.md  memory.md  pyproject.toml
.claude/: settings.json
.gemini/: settings.json
.github/workflows/: ci.yml
csharp/: README.md  Zentinelle.sln
csharp/src/Zentinelle/: Zentinelle.csproj  ZentinelleClient.cs  ZentinelleOptions.cs
csharp/src/Zentinelle/Exceptions/: ZentinelleException.cs
csharp/src/Zentinelle/Models/: EvaluateOptions.cs  EvaluateResult.cs  Event.cs  PolicyConfig.cs  RegisterResult.cs
csharp/src/Zentinelle/Resilience/: CircuitBreaker.cs
go/: README.md  go.mod
go/zentinelle/: circuit_breaker.go  client.go  errors.go  types.go
java/: README.md  pom.xml
java/src/main/java/ai/zentinelle/: CircuitBreaker.java  ZentinelleClient.java
java/src/main/java/ai/zentinelle/exception/: AuthException.java  ConnectionException.java  PolicyViolationException.java  RateLimitException.java  ZentinelleException.java
java/src/main/java/ai/zentinelle/model/: EmitOptions.java  EvaluateOptions.java  EvaluateResult.java  Event.java  EventCategory.java  ModelUsage.java  PolicyConfig.java  PolicyEvaluation.java  RegisterOptions.java  RegisterResult.java
plugins/agent/: README.md  pyproject.toml
plugins/agent/zentinelle_agent/: __init__.py  cli.py  proxy.py
plugins/agent/zentinelle_agent/hooks/: gemini.py  install.py  post_tool.py
plugins/agent/zentinelle_agent/skill/: SKILL.md
plugins/claude-code/: pyproject.toml
plugins/claude-code/zentinelle_claude_code/: __init__.py  cli.py  proxy.py
plugins/claude-code/zentinelle_claude_code/hooks/: pre_tool.py
plugins/crewai/: README.md  pyproject.toml
plugins/crewai/zentinelle_crewai/: __init__.py  agent.py  callbacks.py  crew.py  task.py  tools.py
plugins/langchain/: pyproject.toml
plugins/langchain/zentinelle_langchain/: __init__.py  callback.py  guardrail.py  runnable.py
plugins/llamaindex/: README.md  pyproject.toml
plugins/llamaindex/zentinelle_llamaindex/: __init__.py  agent.py  callback.py  guardrails.py  llm.py  query_engine.py  retriever.py
plugins/ms-agent-framework/: pyproject.toml
plugins/ms-agent-framework/zentinelle_ms_agent/: __init__.py  extension.py  memory.py  orchestrator.py  tools.py
plugins/n8n/: package.json
plugins/n8n/credentials/: ZentinelleApi.credentials.ts
plugins/n8n/nodes/Zentinelle/: Zentinelle.node.ts
plugins/n8n/nodes/ZentinelleGuardrail/: ZentinelleGuardrail.node.ts
plugins/n8n/nodes/ZentinelleTrigger/: ZentinelleTrigger.node.ts
plugins/vercel-ai/: package.json
plugins/vercel-ai/src/: errors.ts  governed.ts  index.ts  middleware.ts  tool.ts  tracer.ts
python/: README.md  pyproject.toml
python/zentinelle/: __init__.py  _version.py  client.py  types.py
sentinel_sdk/: __init__.py  client.py  types.py
templates/basic-agent/: main.py
templates/rag-agent/: main.py  requirements.txt
templates/tool-agent/: main.py  requirements.txt
tests/: __init__.py  test_client.py
typescript/: package-lock.json  package.json
typescript/src/: client.ts  errors.ts  index.ts  resilience.ts  types.ts
typescript/tests/: client.test.ts
