[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zentinelle"
version = "0.1.0"
description = "Zentinelle SDK - AI Agent Governance & Runtime Control"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Calliope Labs", email = "engineering@calliope.ai" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "compliance",
    "grc",
    "llm",
    "guardrails",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
all = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.20",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://zentinelle.ai"
Documentation = "https://docs.zentinelle.ai"
Repository = "https://github.com/calliopeai/zentinelle-sdk"
Changelog = "https://github.com/calliopeai/zentinelle-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["zentinelle"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
