[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zentinelle-claude-code"
version = "0.1.0"
description = "Zentinelle integration for Claude Code - governance, policy enforcement, and audit for Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Calliope Labs", email = "engineering@calliope.ai" }
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "ai",
    "agents",
    "governance",
    "guardrails",
    "zentinelle",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24.0",
]

[project.scripts]
zentinelle-claude-code = "zentinelle_claude_code.cli:main"

[project.urls]
Homepage = "https://zentinelle.ai"
Documentation = "https://docs.zentinelle.ai/integrations/claude-code"
Repository = "https://github.com/calliopeai/zentinelle-sdk"

[tool.hatch.build.targets.wheel]
packages = ["zentinelle_claude_code"]
